# cfrog

./: .gitignore  README.md  cfrog.json  main.py  pyproject.toml
src/cfrog/: main.py  models.py  project_io.py  run.py
src/frog/: main.py
