[project]
name = "cfrog"
version = "0.1.0"
description = "Competitive Frogramming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[project.scripts]
cfrog = "cfrog.main:app"
frog = "cfrog.main:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.ruff.lint]
select = [
    "A",
    "E",
    "F",
    "B",
    "I",
    "N",
]
